Development: Update modernizer to 1.14.0 and fix violations
Bump the gradle-modernizer-plugin from 1.13.0 to 1.14.0. The newer engine adds
rules that surfaced ~470 violations; this fixes the applicable ones:

- String.format(fmt, args) -> fmt.formatted(args) (non-Locale overload only)
- Collections.emptyList/singletonList/Arrays.asList -> List.of (immutable, non-null)
- Collections.emptySet/singleton -> Set.of; emptyMap/singletonMap -> Map.of
- FileUtils.readFileToString / manual stream reads -> Files.readString
- IOUtils.toString -> new String(in.readAllBytes(), charset)
- Paths.get -> Path.of; Collections.sort -> List.sort;
  collect(toUnmodifiableList) -> toList

The modernizer rules suggesting java.nio.file.Files.copy / Files.writeString are
EXCLUDED rather than applied: the project deliberately uses Apache Commons FileUtils
for file copy/write because java.nio.file.Files does not create missing parent
directories, which is enforced by ArchitectureTest.testFileWriteUsage.

A few remaining violations are advisory and intentionally left (failOnViolations is
false): super(...) to java.io.File's String-only constructor, and Set.of/List.of on
values that may be null.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>